Implemented min/max value validation for input quantity fields
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -28,6 +28,10 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			return '';
 		}
 	}
+	$scope.delLastTab = function() {
+		$scope.inputs.pop();
+		$scope.outputs.pop();
+	}
 
 }])
 </script>
@@ -46,9 +50,10 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			<h1>Fluid properties calculator</h1>
 			<ul class="nav nav-tabs" role="tablist" id="FluidPointTabs">
 		  		<li ng-repeat="input in inputs track by $index" ng-class="getTabClass($index)">
-			  		<a ng-attr-id="FP{{$index + 1}}Tab" data-target="#FluidPoint{{$index + 1}}" role="tab" data-toggle="tab">Fluid point {{$index + 1}}</a>
+			  		<a ng-attr-id="FP{{$index + 1}}Tab" data-target="#FluidPoint{{$index + 1}}" role="tab" data-toggle="tab">Fluid point {{$index + 1}}</a>			  		
 		  		</li>
 			  	<li><a data-target="" id="FluidPointNew" ng-click="createNewTab()">+</a></li>
+			  	<li><a data-target="" ng-click="delLastTab()">x</a></li>			  	
 			</ul>		
 			<div class="tab-content">
 				<div ng-repeat="input in inputs track by $index" ng-class="'tab-pane '+ getTabClass($index)" id="FluidPoint{{$index + 1}}">
