set yellow background
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -27,6 +27,7 @@
 		body {
 	  		height: 100%;
 	  		width: 100%;
+	  		background-color: rgba(252, 240, 194, 1);
 		}
 		h1 {
 			text-align: center;
