Exported base template css styles
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -59,7 +59,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			  		<a ng-attr-id="FP{{$index + 1}}Tab" data-target="#FluidPoint{{$index + 1}}" role="tab" data-toggle="tab" >Fluid point {{$index + 1}}</a>			  		
 		  		</li>
 			  	<li><a data-target="" id="FluidPointNew" ng-click="createNewTab()">+</a></li>
-			  	<li><a data-target="" ng-click="delLastTab()">x</a></li>			  	
+			  	<li><a data-target="" ng-click="delLastTab()">-</a></li>			  	
 			</ul>		
 			<div class="tab-content">
 				<div ng-repeat="input in inputs track by $index" ng-class="'tab-pane '+ getTabClass($index)" id="FluidPoint{{$index + 1}}">
