--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -21,6 +21,11 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		
 	}]);
 </script>
+
+<style>
+
+</style>
+
 {% endblock %}
 
 {% block pills %}
@@ -29,12 +34,12 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 {% endblock %}
 
 {% block content %}
-<div ng-app="FlowResistance" ng-controller="FlowResistanceController" style="display: inline-block; width:85%; padding-top:20px;">
+<div class="content" ng-app="FlowResistance" ng-controller="FlowResistanceController">
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">
 			<h1>Pressure losses in pipe flow</h1>
-			<div style="text-align: center; position:relative; height:50mm">
-					<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
+			<div class="contentSVG">
+				<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
 			</div>		
 			<div ng-form name="myForm">
 				<div smo-input-view="inputs"></div>
