--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -4,7 +4,7 @@
 
 {% block scripts_and_styles %}
 <script src="{% static 'SmoUtil.js' %}"></script>
-
+<link rel="stylesheet" type="text/css" href="{% static 'ThermoFluids/css/SmoInputOutputView.css' %}">
 <script>
 angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
@@ -21,11 +21,6 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		
 	}]);
 </script>
-
-<style>
-
-</style>
-
 {% endblock %}
 
 {% block pills %}
