--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -4,6 +4,7 @@
 
 {% block scripts_and_styles %}
 <script src="{% static 'SmoUtil.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'ThermoFluids/css/SmoInputOutputView.css' %}">
 <script>
 angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
