Provided for documentation written in reStructuredText format (including formulas through MathJax) to be published on pages.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -45,7 +45,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 			<div smo-output-view="outputs"></div>
 		</div>
 		<div class="tab-pane" id="doc">
-			Documentation
+			{% include 'markup/html/FlowResistance.html' %}
 		</div>
 	</div>
 </div>
