--- a/templates/Base.html
+++ b/templates/Base.html
@@ -18,6 +18,9 @@
 <!--     <script src="/data/Workspace/Django/django-example/SmoWebExtra/js/angular.js"></script> -->
     
 	<script src="{% static "ui-bootstrap-tpls-0.11.0.min.js" %}"></script>
+	
+	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	
 	<style>	
 		html{
 	  		height: 100%;
