--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -49,10 +49,10 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 {% endblock %}
 
 {% block content %}
-{% verbatim %}	
 <div ng-app="FluidPropsCalculator" ng-controller="FluidPropsController" style="display: inline-block; width:85%; padding-top:20px;">
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">		
+{% verbatim %}	
 			<h1>Fluid properties calculator</h1>
 			<ul class="nav nav-tabs" role="tablist" id="FluidPointTabs">
 		  		<li ng-repeat="input in inputs track by $index" ng-class="getTabClass($index)">
@@ -73,11 +73,11 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 					<div smo-output-view="outputs[$index]"></div>
 				</div>
 			</div>
+{% endverbatim %}
 		</div>
 		<div class="tab-pane" id="doc">
-			Documentation
+			{% include 'markup/html/FluidPropsCalculator.html' %}
 		</div>
 	</div>	
 </div>
-{% endverbatim %}
 {% endblock %}
