--- a/ThermoFluids/templates/ThermoFluids/HeatPump.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatPump.html
@@ -23,16 +23,27 @@ angular.module('HeatPump', ['ui.bootstrap', 'smo'])
 </script>
 {% endblock %}
 
+{% block pills %}
+	<li class="active" role="presentation"><a id="calcTab" data-target="#calculator" role="tab" data-toggle="tab">Calculator</a></li>
+	<li role="presentation"><a id="docTab" data-target="#doc" role="tab" data-toggle="tab">Doc</a></li>
+{% endblock %}
+
 {% block content %}
-<div ng-app="HeatPump" ng-controller="HeatPumpController">
-	<div class="container">
-		<h1>Heat pump</h1>
-		<div smo-input-view="inputs"></div>
-		<br>
-		<div ng-show="inputs.inputsObtained"><button class="btn btn-default" ng-click="compute()">Compute</button></div>
-		<br>
-		<div smo-output-view="outputs"></div>
-	
+<div ng-app="HeatPump" ng-controller="HeatPumpController" style="display: inline-block; width:85%; padding-top:20px;">
+	<div class="tab-content">
+		<div class="tab-pane active" id="calculator">
+			<h1>Heat pump</h1>
+			<div ng-form name="myForm">
+				<div smo-input-view="inputs"></div>
+			</div>
+			<br>
+			<div ng-show="inputs.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="compute()">Compute</button></div>		
+			<br>
+			<div smo-output-view="outputs"></div>
+		</div>
+		<div class="tab-pane" id="doc">
+			Documentation
+		</div>
 	</div>
 </div>
 
