--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -15,6 +15,8 @@ body {
 }
 
 /* Horizontal navigation bar */ 
+
+
 .navbar > .container {
 	width:95%;
 }
@@ -28,7 +30,7 @@ body {
 
 /* Horizontal navigation brand ('SmoWeb') + hover, focus event style */
 .navbar-default .navbar-brand {
-	color: rgba(0, 82, 189, 1); /*#777*/
+	color: #0875CA; /*#777*/
 	font-size: x-large; 
 	font-weight: bold; 
 	text-align: center;
@@ -42,7 +44,7 @@ body {
 /* Horizontal navigation dropdowns + hover, focus event style */
 
 .navbar-default .navbar-nav > li > a {
-  	color:  rgba(0, 82, 189, 1); /*#777*/
+  	color:  #0875CA; /*#777*/
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
@@ -60,7 +62,7 @@ body {
 
 /* Horizontal navigation dropdowns color switch on collapse */
 .navbar-default .navbar-nav > li > a[aria-expanded="false"] {
-	color: rgba(0, 82, 189, 1);
+	color: #0875CA;
     background-color: black; /*#E7E7E7*/
 }
 
@@ -116,9 +118,9 @@ body {
 }
 
 /* Vertical navigation div */
-.pilldiv {
+body > .pilldiv {
     display: inline-block;
-    width: 10%;
+   	width: 10%;
     height: 100%;
     vertical-align: top;
     padding-top: 20px;
@@ -137,7 +139,7 @@ body {
 /* Active pills + on hover, focus */
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
     color: #FFF;
-    background-color: rgba(0, 82, 189, 1); /*#428BCA*/
+    background-color: #0875CA; /*#428BCA*/
 }
 
 /* Content */
