Implemented responsive dashboard
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/DataManagement/DataExplorer.html
+++ b/DataManagement/templates/DataManagement/DataExplorer.html
@@ -163,7 +163,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="content" ng-app="testApp" ng-controller="testController">
+<div ng-app="testApp" ng-controller="testController">
 	<!-- Nav tabs -->
 	<ul class="nav nav-tabs data-explorer" role="tablist" id="myTab">
 	  <li class="active"><a id="explorerTab" data-target="#treePane" role="tab" data-toggle="tab">Explorer</a></li>
