--- a/DataManagement/templates/DataManagement/ImportCSV.html
+++ b/DataManagement/templates/DataManagement/ImportCSV.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-<div ng-app="csvImportApp" ng-controller="CsvImportController" class="content">
+<div ng-app="csvImportApp" ng-controller="CsvImportController">
 	<h1>Import CSV</h1>
 	<div class="text-field">
 		<div class="text-area">Select CSV file to import</div>
