--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -29,7 +29,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 {% endblock %}
 
 {% block content %}
-<div class="content" ng-app="FlowResistance" ng-controller="FlowResistanceController">
+<div ng-app="FlowResistance" ng-controller="FlowResistanceController">
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">
 			<h1>Pressure losses in pipe flow</h1>
