--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -51,7 +51,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 
 {% block content %}
 {% verbatim %}	
-<div class="content" ng-app="FluidPropsCalculator" ng-controller="FluidPropsController">
+<div ng-app="FluidPropsCalculator" ng-controller="FluidPropsController">
 	<div class="tab-content">
 		<div class="tab-pane active" id="calculator">		
 			<h1>Fluid properties calculator</h1>
