--- a/ThermoFluids/static/ThermoFluids/css/SmoInputOutputView.css
+++ b/ThermoFluids/static/ThermoFluids/css/SmoInputOutputView.css
@@ -32,6 +32,8 @@
 	padding-left: 20px; 
 	background-color: #E6E6FA;
 	padding-bottom: 20px;
+	white-space: nowrap;
+	overflow: auto;
 }
 
 [smo-super-group] {
