Vertical navigation work
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -4,7 +4,7 @@
 
 {% block scripts_and_styles %}
 <script src="{% static 'SmoUtil.js' %}"></script>
-<link rel="stylesheet" type="text/css" href="{% static 'ThermoFluids/css/SmoInputOutputView.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/SmoInputOutputView.css' %}">
 <script>
 angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
