--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -7,14 +7,13 @@ body {
   padding-top: 50px;
 }
 
-
 /*
  * Global add-ons
  */
 
 .sub-header {
   padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #EEE;
 }
 
 /*
@@ -29,53 +28,63 @@ body {
  * Sidebar
  */
 
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 50px;
     bottom: 0;
     left: 0;
     z-index: 1000;
-    display: block;
-    padding: 20px;
+    display: block;    
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #E6E6FA; /*#F5F5F5*/
+    background-color: #E6E6FA;
     border-right: 1px solid #eee;
+    width: 120px;
   }
 }
 
 /* Sidebar navigation */
+
 .nav-sidebar {
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
-  margin-left: -20px;
+  margin-left: -31px;
+  display: inline-block;
+  background-color: #E6E6FA;	
 }
+
+.nav-sidebar > li {
+	width: 100px;
+	display: inline-block;
+}
+
 .nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
+  width: 100px;
+  cursor: pointer;
 }
+ 
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
   color: #fff;
-  background-color: #428bca;
+  background-color: #0875CA; 
 }
-
 
 /*
  * Main content
  */
 
 .main {
-  padding: 20px;
+	padding-top: 0px;
+	padding-left: 31px;
+	padding-right: 21px;
+	padding-bottom: 20px;
 }
 @media (min-width: 768px) {
   .main {
+  	padding-top: 20px;
+  	padding-bottom: 20px;
     padding-right: 40px;
     padding-left: 40px;
   }
