--- a/templates/Base.html
+++ b/templates/Base.html
@@ -5,7 +5,6 @@
 	<head>
 	<!-- Bootstrap core CSS -->	
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
-	   
     <!-- Custom styles for this template -->
 	<!--     <link href="http://getbootstrap.com/examples/navbar-static-top/navbar-static-top.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="{% static 'css/Base.css' %}">
@@ -72,8 +71,8 @@
     
     <div class="container-fluid">
 		<div class="row">
-	        <div class="col-sm-2 col-md-1 sidebar">
-	          <ul class="nav nav-pills nav-sidebar">
+	        <div class="col-sm-2 col-md-1 sidebar main">
+	          <ul class="nav nav-sidebar">
 	            {% block pills %}
 	            {% endblock %}
 	          </ul>
