--- a/templates/Base.html
+++ b/templates/Base.html
@@ -63,13 +63,13 @@
         		{% endblock %}
 			</ul>
 			<div class="logo">
-          		<img src="{% static 'img/SysMoLogo.png' %}">
+          		<a href="http://www.sysmoltd.com"><img src="{% static 'img/SysMoLogo.png' %}"></a>
         	</div>
 		</div><!--/.nav-collapse -->
       </div>
     </div>
     
-    <div class="container-fluid">
+    <div class="container-fluid" id="content">
 		<div class="row">
 	        <div class="col-sm-2 col-md-1 sidebar main">
 	          <ul class="nav nav-sidebar">
@@ -83,6 +83,10 @@
 			</div>
 		</div>
 	</div>
+	<footer id="footer">         
+       <span class="text-muted">Questions? <a href="#">Contact us</a></span> 
+       <span class="text-muted" style="float: right;">&copy 2014 <a href="http://www.sysmoltd.com">Sysmo Ltd.</a></span>    
+    </footer>
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
