--- a/ThermoFluids/templates/markup/html/FlowResistance.html
+++ b/ThermoFluids/templates/markup/html/FlowResistance.html
@@ -1,189 +1,174 @@
 <div class="document" id="flow-resistance">
-	<h1 class="title">Flow resistance</h1>
-	<object data="/static/ThermoFluids/StraightPipe.svg"
-		style="width: 1000px;" type="image/svg+xml">
-		/static/ThermoFluids/StraightPipe.svg</object>
-	<div class="section" id="parameters">
-		<h1>Parameters</h1>
-		<table border="1" class="docutils">
-			<colgroup>
-				<col width="47%" />
-				<col width="53%" />
-			</colgroup>
-			<thead valign="bottom">
-				<tr>
-					<th class="head">Symbol</th>
-					<th class="head">Parameter name</th>
-				</tr>
-			</thead>
-			<tbody valign="top">
-				<tr>
-					<td><span class="math">\(d_i\)</span></td>
-					<td>internal pipe diameter</td>
-				</tr>
-				<tr>
-					<td><span class="math">\(d_e\)</span></td>
-					<td>external pipe diameter</td>
-				</tr>
-				<tr>
-					<td><span class="math">\(L\)</span></td>
-					<td>pipe length</td>
-				</tr>
-				<tr>
-					<td><span class="math">\(\varepsilon\)</span></td>
-					<td>pipe surface roughness</td>
-				</tr>
-				<tr>
-					<td><span class="math">\(p_i\)</span></td>
-					<td>inlet pressure</td>
-				</tr>
-				<tr>
-					<td><span class="math">\(T_i\)</span></td>
-					<td>inlet temperature</td>
-				</tr>
-				<tr>
-					<td><span class="math">\(\dot{m}\)</span></td>
-					<td>inlet mass flow rate</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	<div class="section" id="geometry-properties">
-		<h1>Geometry properties</h1>
-		<p>The flow area is</p>
-		<div class="math">\begin{equation*} A_f = \frac{\pi d_i^2}{4}
-			\end{equation*}</div>
-		<p>The fluid volume is:</p>
-		<div class="math">\begin{equation*} V = A_f L \end{equation*}</div>
-		<p>The internal and external surface areas are calculated as:</p>
-		<div class="math">\begin{equation*} A_i = \pi d_i L
-			\end{equation*}</div>
-		<div class="math">\begin{equation*} A_e = \pi d_e L
-			\end{equation*}</div>
-		<p>The mass of the pipe is:</p>
-		<div class="math">\begin{equation*} m_p = \rho_p \frac{\pi
-			\left( d_e^2 - d_i^2 \right)}{4}L \end{equation*}</div>
-		<p>
-			where <span class="math">\(\rho_p\)</span> is the density of the pipe
-			material (steel, aluminium etc.)
-		</p>
-	</div>
-	<div class="section" id="pressure-losses">
-		<h1>Pressure losses</h1>
-		<p>
-			In general the pressure loss in pipes and components depends on the
-			upstream fluid density <span class="math">\(\rho\)</span> and the
-			flow velocity
-		</p>
-		<div class="math">\begin{equation*} v = \frac{\dot{m}}{\rho
-			A_{f}} \end{equation*}</div>
-		<p>This pressure loss can be calculated from the formula:</p>
-		<div class="math">\begin{equation*} \Delta p=c_{d}\frac{\rho
-			v^{2}}{2}, \end{equation*}</div>
-		<p>
-			where <span class="math">\(c_{d}\)</span> is the flow drag
-			coefficient. For pipes the drag coefficient depends on the pipe
-			geometry and the <em>Darcy friction factor</em> <span class="math">\(\zeta\)</span>
-			<a class="citation-reference" href="#wikip-dff" id="id1">[Wikip-DFF]</a>:
-		</p>
-		<div class="math">\begin{equation*} c_{d}=\zeta\frac{L}{d_i}
-			\end{equation*}</div>
-		<p>
-			where <span class="math">\(L\)</span> is the length of the pipe and <span
-				class="math">\(d_i\)</span> is the internal diameter of the pipe.
-		</p>
-		<p>
-			The friction factor depends on the Reynolds number <span class="math">\(Re={\rho
-				v d}/{\mu}\)</span> and the relative surface roughness <span class="math">\(\varepsilon/d\)</span>.
-			It can be determined using the <em>Moody chart</em>
-		</p>
-		<div class="line-block">
-			<div class="line">
-				<br />
-			</div>
-		</div>
-		<div class="figure align-center">
-			<img alt="/static/ThermoFluids/MoodyDiagram.jpg"
-				src="/static/ThermoFluids/MoodyDiagram.jpg" style="width: 1000px;" />
-			<p class="caption">Moody chart</p>
-		</div>
-		<p>In the laminar region the friction factor depends solely on the
-			Reynolds number:</p>
-		<div class="math">\begin{equation*} \zeta = \frac{64}{Re}
-			\end{equation*}</div>
-		<p>
-			In the turbulent region the relation is more complex and is given by
-			the <em>Colebrook</em> equation <a class="citation-reference"
-				href="#colebrook39" id="id2">[Colebrook39]</a>:
-		</p>
-		<div class="math">\begin{equation*} \frac{1}{\sqrt{\zeta}} =
-			-2.0 \log_{10} \left(\frac{\epsilon/d}{3.7} + {\frac{2.51}{Re
-			\sqrt{\zeta} } } \right) \end{equation*}</div>
-		<p>At very high Reynolds numbers the friction factor depends
-			solely on the relative surface roughness.</p>
-		<p>
-			Because the <em>Colebrook</em> correlation is implicit in <span
-				class="math">\(\zeta\)</span>, it is not suitable for direct
-			calculations. Different approximations have been developed amongst
-			which special attention deserves the <em>Churchill</em> correlation <a
-				class="citation-reference" href="#church77" id="id3">[Church77]</a>,
-			which covers all flow regimes: laminar, transitional and turbulent:
-		</p>
-		<div class="math">\begin{equation*} \zeta =
-			8\left[\left(\frac{8}{Re}\right)^{12}+\frac{1}{\left(\Theta_{1}+\Theta_{2}\right)^{1.5}}\right]^{\frac{1}{12}}
-			\end{equation*}</div>
-		<div class="math">\begin{equation*} \Theta_{1} =
-			\left[2.457\cdot\ln\left(\left(\frac{7}{Re}\right)^{0.9}+0.27\frac{\varepsilon}{d}\right)\right]^{16}
-			\end{equation*}</div>
-		<div class="math">\begin{equation*} \Theta_{2} =
-			\left(\frac{37530}{Re}\right)^{16} \end{equation*}</div>
-	</div>
-	<div class="section" id="references">
-		<h1>References</h1>
-		<table class="docutils citation" frame="void" id="wikip-dff"
-			rules="none">
-			<colgroup>
-				<col class="label" />
-				<col />
-			</colgroup>
-			<tbody valign="top">
-				<tr>
-					<td class="label"><a class="fn-backref" href="#id1">[Wikip-DFF]</a></td>
-					<td><a class="reference external"
-						href="http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae">http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae</a></td>
-				</tr>
-			</tbody>
-		</table>
-		<table class="docutils citation" frame="void" id="church77"
-			rules="none">
-			<colgroup>
-				<col class="label" />
-				<col />
-			</colgroup>
-			<tbody valign="top">
-				<tr>
-					<td class="label"><a class="fn-backref" href="#id3">[Church77]</a></td>
-					<td>Churchill, S.W. (November 7, 1977). &quot;Friction-factor
-						equation spans all fluid-flow regimes&quot;. Chemical Engineering:
-						91–92.</td>
-				</tr>
-			</tbody>
-		</table>
-		<table class="docutils citation" frame="void" id="colebrook39"
-			rules="none">
-			<colgroup>
-				<col class="label" />
-				<col />
-			</colgroup>
-			<tbody valign="top">
-				<tr>
-					<td class="label"><a class="fn-backref" href="#id2">[Colebrook39]</a></td>
-					<td>Colebrook, C.F. (February 1939). &quot;Turbulent flow in
-						pipes, with particular reference to the transition region between
-						smooth and rough pipe laws&quot;. Journal of the Institution of
-						Civil Engineers (London).</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+<h1 class="title">Flow resistance</h1>
+<div class="figure align-center">
+<object data="/static/ThermoFluids/StraightPipe.svg" style="width: 90%;" type="image/svg+xml">
+/static/ThermoFluids/StraightPipe.svg</object>
+<p class="caption">Pipe parameters</p>
+</div>
+<div class="section" id="parameters">
+<h1>1.&nbsp;&nbsp;&nbsp;Parameters</h1>
+<table border="1" class="nice-table docutils">
+<colgroup>
+<col width="41%" />
+<col width="47%" />
+<col width="12%" />
+</colgroup>
+<thead valign="bottom">
+<tr><th class="head">Symbol</th>
+<th class="head">Parameter name</th>
+<th class="head">Unit</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr><td><span class="math">\(d_i\)</span></td>
+<td>internal pipe diameter</td>
+<td>mm</td>
+</tr>
+<tr><td><span class="math">\(d_e\)</span></td>
+<td>external pipe diameter</td>
+<td>mm</td>
+</tr>
+<tr><td><span class="math">\(L\)</span></td>
+<td>pipe length</td>
+<td>m</td>
+</tr>
+<tr><td><span class="math">\(\varepsilon\)</span></td>
+<td>pipe surface roughness</td>
+<td>mm</td>
+</tr>
+<tr><td><span class="math">\(p_i\)</span></td>
+<td>inlet pressure</td>
+<td>bar</td>
+</tr>
+<tr><td><span class="math">\(T_i\)</span></td>
+<td>inlet temperature</td>
+<td>K</td>
+</tr>
+<tr><td><span class="math">\(\dot{m}\)</span></td>
+<td>inlet mass flow rate</td>
+<td>kg/h</td>
+</tr>
+</tbody>
+</table>
+<div class="line-block">
+<div class="line"><br /></div>
+</div>
+</div>
+<div class="section" id="geometry-properties">
+<h1>2.&nbsp;&nbsp;&nbsp;Geometry properties</h1>
+<p>The flow area is</p>
+<div class="math">
+\begin{equation*}
+A_f = \frac{\pi d_i^2}{4}
+\end{equation*}
+</div>
+<p>The fluid volume is:</p>
+<div class="math">
+\begin{equation*}
+V = A_f L
+\end{equation*}
+</div>
+<p>The internal and external surface areas are calculated as:</p>
+<div class="math">
+\begin{equation*}
+A_i = \pi d_i L
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+A_e = \pi d_e L
+\end{equation*}
+</div>
+<p>The mass of the pipe is:</p>
+<div class="math">
+\begin{equation*}
+m_p =  \rho_p \frac{\pi \left( d_e^2 - d_i^2 \right)}{4}L
+\end{equation*}
+</div>
+<p>where <span class="math">\(\rho_p\)</span> is the density of the pipe material (steel, aluminium etc.)</p>
+</div>
+<div class="section" id="pressure-losses">
+<h1>3.&nbsp;&nbsp;&nbsp;Pressure losses</h1>
+<p>In general the pressure loss in pipes and components depends on the upstream fluid density <span class="math">\(\rho\)</span> and the flow velocity</p>
+<div class="math">
+\begin{equation*}
+v = \frac{\dot{m}}{\rho A_{f}}
+\end{equation*}
+</div>
+<p>This pressure loss can be calculated from the formula:</p>
+<div class="math">
+\begin{equation*}
+\Delta p=c_{d}\frac{\rho v^{2}}{2},
+\end{equation*}
+</div>
+<p>where <span class="math">\(c_{d}\)</span> is the flow drag coefficient. For pipes the drag coefficient depends on the pipe geometry and the <em>Darcy friction factor</em> <span class="math">\(\zeta\)</span> <a class="citation-reference" href="#wikip-dff" id="id1">[Wikip-DFF]</a>:</p>
+<div class="math">
+\begin{equation*}
+c_{d}=\zeta\frac{L}{d_i}
+\end{equation*}
+</div>
+<p>where <span class="math">\(L\)</span> is the length of the pipe and <span class="math">\(d_i\)</span> is the internal diameter of the pipe.</p>
+<p>The friction factor depends on the Reynolds number <span class="math">\(Re={\rho v d}/{\mu}\)</span> and the relative surface roughness <span class="math">\(\varepsilon/d\)</span>. It can be determined using the <em>Moody chart</em></p>
+<div class="line-block">
+<div class="line"><br /></div>
+</div>
+<div class="figure align-center">
+<img alt="/static/ThermoFluids/MoodyDiagram.jpg" src="/static/ThermoFluids/MoodyDiagram.jpg" style="width: 90%;" />
+<p class="caption">Moody chart</p>
+</div>
+<p>In the laminar region the friction factor depends solely on the Reynolds number:</p>
+<div class="math">
+\begin{equation*}
+\zeta = \frac{64}{Re}
+\end{equation*}
+</div>
+<p>In the turbulent region the relation is more complex and is given by the <em>Colebrook</em> equation <a class="citation-reference" href="#colebrook39" id="id2">[Colebrook39]</a>:</p>
+<div class="math">
+\begin{equation*}
+\frac{1}{\sqrt{\zeta}} = -2.0 \log_{10} \left(\frac{\epsilon/d}{3.7} + {\frac{2.51}{Re \sqrt{\zeta} } } \right)
+\end{equation*}
+</div>
+<p>At very high Reynolds numbers the friction factor depends solely on the relative surface roughness.</p>
+<p>Because the <em>Colebrook</em> correlation is implicit in <span class="math">\(\zeta\)</span>, it is not suitable for direct calculations.
+Different approximations have been developed amongst which special attention deserves the <em>Churchill</em> correlation <a class="citation-reference" href="#church77" id="id3">[Church77]</a>, which covers
+all flow regimes: laminar, transitional and turbulent:</p>
+<div class="math">
+\begin{equation*}
+\zeta =  8\left[\left(\frac{8}{Re}\right)^{12}+\frac{1}{\left(\Theta_{1}+\Theta_{2}\right)^{1.5}}\right]^{\frac{1}{12}}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\Theta_{1}  =  \left[2.457\cdot\ln\left(\left(\frac{7}{Re}\right)^{0.9}+0.27\frac{\varepsilon}{d}\right)\right]^{16}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\Theta_{2}  =  \left(\frac{37530}{Re}\right)^{16}
+\end{equation*}
+</div>
+</div>
+<div class="section" id="references">
+<h1>4.&nbsp;&nbsp;&nbsp;References</h1>
+<table class="docutils citation" frame="void" id="wikip-dff" rules="none">
+<colgroup><col class="label" /><col /></colgroup>
+<tbody valign="top">
+<tr><td class="label"><a class="fn-backref" href="#id1">[Wikip-DFF]</a></td><td><a class="reference external" href="http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae">http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae</a></td></tr>
+</tbody>
+</table>
+<table class="docutils citation" frame="void" id="church77" rules="none">
+<colgroup><col class="label" /><col /></colgroup>
+<tbody valign="top">
+<tr><td class="label"><a class="fn-backref" href="#id3">[Church77]</a></td><td>Churchill, S.W. (November 7, 1977). &quot;Friction-factor equation spans all fluid-flow regimes&quot;.
+Chemical Engineering: 91–92.</td></tr>
+</tbody>
+</table>
+<table class="docutils citation" frame="void" id="colebrook39" rules="none">
+<colgroup><col class="label" /><col /></colgroup>
+<tbody valign="top">
+<tr><td class="label"><a class="fn-backref" href="#id2">[Colebrook39]</a></td><td>Colebrook, C.F. (February 1939). &quot;Turbulent flow in pipes, with particular reference to the
+transition region between smooth and rough pipe laws&quot;. Journal of the Institution of Civil Engineers (London).</td></tr>
+</tbody>
+</table>
+</div>
 </div>
