--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -108,14 +108,15 @@ body {
 }
 
 
-h1 {
+h1.title {
 	text-align: center;
+	font-weight: bold; 
 }
+
 
 .contentSVG {
 	text-align: center; 
 	position:relative; 
-	height:50mm;
 }
 
 /* Content */
@@ -123,4 +124,61 @@ h1 {
 	height: auto; 
 	min-height: 100%;
 	padding-bottom: 20px;
+}
+
+/* Documentation */
+div.docview {
+		width: 1000px; 
+		margin-left: auto; 
+		margin-right: auto; 
+		background-color:white; 
+		border: solid black 1px; 
+		padding: 50px;
+		counter-reset: figure;
+}
+
+.section > h1 {
+	margin-top: 30px;	
+	margin-bottom: 30px;	
+}
+
+.section > h2 {
+	margin-top: 20px;	
+	margin-bottom: 20px;	
+}
+
+.align-center {
+	text-align: center;
+}
+
+.figure > .caption:before {
+	font-weight: bold;
+	counter-increment: figure;
+	content: "Figure " counter(figure) ": ";	
+}
+
+table.nice-table {
+    margin-left:auto; 
+    margin-right:auto;
+    border: solid 1px #A0A0A0;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+table.nice-table td,
+table.nice-table th {
+    padding: 10px;	
+    border: solid 1px #A0A0A0; 
+}
+
+table.nice-table th {
+	background-color: #BABABA;
+}
+
+table.nice-table tr:nth-child(even) {
+	background: #E6E6FA;
+}
+
+table.nice-table tr:nth-child(odd) {
+	background: #FFFFFF;
 }
